# UI_Extractor_tool

./: .gitignore
backend/: README.md  extractor.py  locator_strategy.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py  validator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  main.css  main.tsx  types.ts
frontend/src/components/: DistributionChart.tsx  ElementDetailSheet.tsx  ElementsTable.tsx  ExportMenu.tsx  FilterBar.tsx  InteractiveStatsCards.tsx  LocatorRow.tsx  StatsBar.tsx  ToastNotification.tsx
