[project]
name = "backend"
version = "0.1.0"
description = "Simplified UI Locator Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cssselect>=1.4.0",
    "fastapi>=0.115.0",
    "lxml>=6.0.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.6",
]
